--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -57,8 +57,8 @@ http {
             internal;
         }
 
-        error_log /var/log/nginx/access.log;
-        access_log /var/log/nginx/error.log;
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
     }
 
 }
