--- a/root/etc/ansible/entrypoint.yml
+++ b/root/etc/ansible/entrypoint.yml
@@ -9,7 +9,8 @@
     database_name: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_NAME') }}"
     database_password: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PASSWORD') }}"
     database_port: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PORT') }}"
-    database_root_password: "{{ lookup('env', 'MYSQL_ROOT_PASSWORD') }}"
+    database_root_password_mariadb: "{{ lookup('env', 'MYSQL_ROOT_PASSWORD') }}"
+    database_root_password_postgres: "{{ lookup('env', 'POSTGRES_PASSWORD') }}"
     database_user: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_USER') }}"
 
   tasks:
@@ -39,16 +40,18 @@
     - name: wait for db container
       wait_for:
         host="{{ database_host }}"
-        port=3306
-      when: database_driver == 'pdo_mysql'
+        port="{{ database_port }}"
+      when: (database_driver == 'pdo_mysql') or
+            (database_driver == 'pdo_pgsql')
 
-    - name: mariadb db
+    - name: add mariadb db
       mysql_db:
         name="{{ database_name }}"
         state=present
         login_host="{{ database_host }}"
+        login_port={{ database_port }}
         login_user=root
-        login_password="{{ database_root_password }}"
+        login_password="{{ database_root_password_mariadb }}"
       notify: run install
       when: database_driver == 'pdo_mysql'
 
@@ -59,12 +62,37 @@
         password="{{ database_password }}"
         priv={{ database_name }}.*:ALL
         login_host="{{ database_host }}"
-        login_port="{{ database_port }}"
+        login_port={{ database_port }}
         login_user=root
-        login_password="{{ database_root_password }}"
+        login_password="{{ database_root_password_mariadb }}"
         state=present
       when: (database_driver == 'pdo_mysql') and
             (database_user != 'root')
+
+    - name: postgresql db
+      postgresql_db:
+        name="{{ database_name }}"
+        state=present
+        login_host="{{ database_host }}"
+        port={{ database_port }}
+        login_user=postgres
+        login_password="{{ database_root_password_postgres }}"
+      notify: run install
+      when: database_driver == 'pdo_pgsql'
+
+    - name: add postgresql user
+      postgresql_user:
+        name="{{ database_user }}"
+        password="{{ database_password }}"
+        db={{ database_name }}
+        priv=ALL
+        login_host="{{ database_host }}"
+        port={{ database_port }}
+        login_user=postgres
+        login_password="{{ database_root_password_postgres }}"
+        state=present
+      when: (database_driver == 'pdo_pgsql') and
+            (database_user != 'postgres')
 
     - name: remove cache
       file:
