--- a/root/etc/ansible/entrypoint.yml
+++ b/root/etc/ansible/entrypoint.yml
@@ -10,6 +10,7 @@
     database_password: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PASSWORD') }}"
     database_port: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PORT') }}"
     database_root_password_mariadb: "{{ lookup('env', 'MYSQL_ROOT_PASSWORD') }}"
+    database_root_user_postgres: "{{ lookup('env', 'POSTGRES_USER') }}"
     database_root_password_postgres: "{{ lookup('env', 'POSTGRES_PASSWORD') }}"
     database_user: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_USER') }}"
 
@@ -75,7 +76,7 @@
         state=present
         login_host="{{ database_host }}"
         port={{ database_port }}
-        login_user=postgres
+        login_user="{{ database_root_user_postgres }}"
         login_password="{{ database_root_password_postgres }}"
       notify: run install
       when: database_driver == 'pdo_pgsql'
@@ -88,7 +89,7 @@
         priv=ALL
         login_host="{{ database_host }}"
         port={{ database_port }}
-        login_user=postgres
+        login_user="{{ database_root_user_postgres }}"
         login_password="{{ database_root_password_postgres }}"
         state=present
       when: (database_driver == 'pdo_pgsql') and
