--- a/root/etc/ansible/entrypoint.yml
+++ b/root/etc/ansible/entrypoint.yml
@@ -21,9 +21,17 @@
         path={{ item }}
         state=directory
       with_items:
-        - /var/www/wallabag/data/db
+        - /var/www/wallabag/app
+        - /var/www/wallabag/app/config
+        - /var/www/wallabag/data
         - /var/www/wallabag/data/assets
+        - /var/www/wallabag/data/db
       notify: chown dir
+
+    - name: write parameters.yml
+      template:
+        src=templates/parameters.yml.j2
+        dest=/var/www/wallabag/app/config/parameters.yml
 
     - stat:
         path=/var/www/wallabag/data/db/wallabag.sqlite
@@ -110,6 +118,12 @@
 
     - name: run install
       shell: php bin/console wallabag:install --env=prod -n
+      args:
+        chdir: /var/www/wallabag
+      notify: chown dir
+
+    - name: run migration
+      shell: php bin/console doctrine:migrations:migrate --env=prod
       args:
         chdir: /var/www/wallabag
       notify: chown dir
