--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -1,12 +1,13 @@
 parameters:
-    database_driver: %env.database_driver%
-    database_host: %env.database_host%
-    database_port: %env.database_port%
-    database_name: %env.database_name%
-    database_user: %env.database_user%
-    database_password: %env.database_password%
+    database_driver: pdo_sqlite
+    database_host: 127.0.0.1
+    database_port: ~
+    database_name: symfony
+    database_user: root
+    database_password: ~
     database_path: "%kernel.root_dir%/../data/db/wallabag.sqlite"
     database_table_prefix: wallabag_
+    database_socket: null
 
     test_database_driver: pdo_sqlite
     test_database_host: 127.0.0.1
@@ -45,5 +46,7 @@ parameters:
     rabbitmq_password: guest
 
     # Redis processing
+    redis_scheme: tcp
     redis_host: localhost
     redis_port: 6379
+    redis_path: null
