defaults for environment variable lookup for parameters.yml template
fixes #26

--- a/root/etc/ansible/entrypoint.yml
+++ b/root/etc/ansible/entrypoint.yml
@@ -4,15 +4,15 @@
 
   vars:
 
-    database_driver: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_DRIVER') }}"
-    database_host: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_HOST') }}"
-    database_name: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_NAME') }}"
-    database_password: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PASSWORD') }}"
-    database_port: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PORT') }}"
+    database_driver: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_DRIVER')|default('pdo_sqlite', true) }}"
+    database_host: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_HOST')|default('127.0.0.1', true) }}"
+    database_name: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_NAME')|default('symfony', true) }}"
+    database_password: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PASSWORD')|default('~', true) }}"
+    database_port: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_PORT')|default('~', true) }}"
     database_root_password_mariadb: "{{ lookup('env', 'MYSQL_ROOT_PASSWORD') }}"
     database_root_user_postgres: "{{ lookup('env', 'POSTGRES_USER') }}"
     database_root_password_postgres: "{{ lookup('env', 'POSTGRES_PASSWORD') }}"
-    database_user: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_USER') }}"
+    database_user: "{{ lookup('env', 'SYMFONY__ENV__DATABASE_USER')|default('root', true) }}"
     secret: "{{ lookup('env', 'SYMFONY__ENV__SECRET')|default('ovmpmAWXRCabNlMgzlzFXDYmCFfzGv', true) }}"
 
   tasks:
