enabled zlib.output_compression in php.ini
thanks to @itnAAnti. #40

--- a/root/etc/php7/php.ini
+++ b/root/etc/php7/php.ini
@@ -268,7 +268,7 @@ output_buffering = 4096
 ; Note: You need to use zlib.output_handler instead of the standard
 ;   output_handler, or otherwise the output will be corrupted.
 ; http://php.net/zlib.output-compression
-zlib.output_compression = Off
+zlib.output_compression = On
 
 ; http://php.net/zlib.output-compression-level
 ;zlib.output_compression_level = -1
