--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -8,6 +8,7 @@ parameters:
     database_path: "%kernel.root_dir%/../data/db/wallabag.sqlite"
     database_table_prefix: wallabag_
     database_socket: null
+    database_charset: utf8
 
     test_database_driver: pdo_sqlite
     test_database_host: 127.0.0.1
@@ -44,9 +45,14 @@ parameters:
     rabbitmq_port: 5672
     rabbitmq_user: guest
     rabbitmq_password: guest
+    rabbitmq_prefetch_count: 10
 
     # Redis processing
     redis_scheme: tcp
     redis_host: localhost
     redis_port: 6379
     redis_path: null
+    redis_password: null
+
+    # sites credentials
+    sites_credentials: {}
