--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -10,6 +10,8 @@ parameters:
     database_socket: null
     database_charset: utf8
 
+    domain_name: https://your-wallabag-url-instance.com
+
     test_database_driver: pdo_sqlite
     test_database_host: 127.0.0.1
     test_database_port: ~
@@ -53,6 +55,3 @@ parameters:
     redis_port: 6379
     redis_path: null
     redis_password: null
-
-    # sites credentials
-    sites_credentials: {}
