Updated parameters for 2.3.1

--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -9,6 +9,7 @@ parameters:
     database_table_prefix: wallabag_
     database_socket: null
     database_charset: utf8
+    database_driver_class: null
 
     domain_name: https://your-wallabag-url-instance.com
 
