--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -25,6 +25,9 @@ parameters:
     mailer_host:       127.0.0.1
     mailer_user:       ~
     mailer_password:   ~
+    mailer_port:       25
+    mailer_encryption: ~
+    mailer_auth_mode:  ~ 
 
     locale:            en
 
