--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -22,12 +22,12 @@ parameters:
     test_database_path: "%kernel.root_dir%/../data/db/wallabag_test.sqlite"
 
     mailer_transport:  smtp
-    mailer_host:       127.0.0.1
     mailer_user:       ~
     mailer_password:   ~
-    mailer_port:       25
+    mailer_host:       127.0.0.1
+    mailer_port:       false
     mailer_encryption: ~
-    mailer_auth_mode:  ~ 
+    mailer_auth_mode:  ~
 
     locale:            en
 
