--- a/tests/docker-compose.postgresql.yml
+++ b/tests/docker-compose.postgresql.yml
@@ -10,6 +10,7 @@ services:
       - POSTGRES_USER=my-super-user
       - SYMFONY__ENV__SECRET=F00B4R
       - SYMFONY__ENV__DATABASE_DRIVER=pdo_pgsql
+      - SYMFONY__ENV__DATABASE_DRIVER_CLASS=Wallabag\CoreBundle\Doctrine\DBAL\Driver\CustomPostgreSQLDriver
       - SYMFONY__ENV__DATABASE_HOST=db
       - SYMFONY__ENV__DATABASE_PORT=5432
       - SYMFONY__ENV__DATABASE_NAME=wallabag
@@ -18,7 +19,7 @@ services:
     ports:
       - "127.0.0.1:80:80"
   db:
-    image: postgres:9.6
+    image: postgres:10.3
     environment:
       - POSTGRES_PASSWORD=my-secret-pw
       - POSTGRES_USER=my-super-user
