--- a/root/etc/ansible/entrypoint.yml
+++ b/root/etc/ansible/entrypoint.yml
@@ -132,9 +132,7 @@
         - firstrun
 
     - name: remove cache
-      file:
-        path=/var/www/wallabag/var/cache
-        state=absent
+      shell: rm -rf /var/www/wallabag/var/cache
 
     - name: run composer
       shell: SYMFONY_ENV=prod composer install --no-dev -o --prefer-dist
