--- a/root/etc/ansible/entrypoint.yml
+++ b/root/etc/ansible/entrypoint.yml
@@ -132,7 +132,7 @@
         - firstrun
 
     - name: remove cache
-      shell: rm -rf /var/www/wallabag/var/cache
+      shell: su -c "rm -rf /var/www/wallabag/var/cache"
 
     - name: run composer
       shell: SYMFONY_ENV=prod composer install --no-dev -o --prefer-dist
