Fix #124 - Allow to sepcify at runtime the PHP memory_limit parameter

--- a/root/etc/ansible/entrypoint.yml
+++ b/root/etc/ansible/entrypoint.yml
@@ -37,6 +37,7 @@
     redis_password: "{{ lookup('env', 'SYMFONY__ENV__REDIS_PASSWORD')|default('~', true) }}"
     sentry_dsn: "{{ lookup('env', 'SYMFONY__ENV__SENTRY_DSN')|default('~', true) }}"
     server_name: "{{ lookup('env', 'SYMFONY__ENV__SERVER_NAME')|default('Your wallabag instance', true) }}"
+    php_memory_limit: "{{ lookup('env', 'PHP_MEMORY_LIMIT_MB')|default('128', true) }}"
 
   tasks:
 
@@ -58,6 +59,11 @@
       template:
         src=templates/parameters.yml.j2
         dest=/var/www/wallabag/app/config/parameters.yml
+
+    - name: write php.ini
+      template:
+        src=templates/php.ini.j2
+        dest=/etc/php7/php.ini
 
     - stat:
         path=/var/www/wallabag/data/db/wallabag.sqlite
