--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -31,6 +31,8 @@ http {
     }
 
     server {
+        listen 80;
+        listen [::]:80;
         server_name _;
         root /var/www/wallabag/web;
 
