--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -9,17 +9,8 @@ parameters:
     database_table_prefix: wallabag_
     database_socket: null
     database_charset: utf8
-    database_driver_class: null
 
     domain_name: https://your-wallabag-url-instance.com
-
-    test_database_driver: pdo_sqlite
-    test_database_host: 127.0.0.1
-    test_database_port: ~
-    test_database_name: ~
-    test_database_user: ~
-    test_database_password: ~
-    test_database_path: "%kernel.root_dir%/../data/db/wallabag_test.sqlite"
 
     mailer_transport:  smtp
     mailer_user:       ~
@@ -42,6 +33,11 @@ parameters:
     fosuser_registration: true
     fosuser_confirmation: true
 
+    # how long the access token should live in seconds for the API
+    fos_oauth_server_access_token_lifetime: 3600
+    # how long the refresh token should life in seconds for the API
+    fos_oauth_server_refresh_token_lifetime: 1209600
+
     from_email: no-reply@wallabag.org
 
     rss_limit: 50
@@ -60,5 +56,5 @@ parameters:
     redis_path: null
     redis_password: null
 
-    # Sentry
+    # sentry logging
     sentry_dsn: ~
