Add missing parameter `server_name` for 2.4.1

--- a/root/var/www/wallabag/app/config/parameters.yml
+++ b/root/var/www/wallabag/app/config/parameters.yml
@@ -58,3 +58,6 @@ parameters:
 
     # sentry logging
     sentry_dsn: ~
+
+    # User-friendly name of your instance for 2FA issuer
+    server_name: Your wallabag instance
