feat(docker-compose): add data_config volume

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,6 @@ SERVER_URL=http://localhost:${SERVER_PORT}
 SERVER_NAME="Your wallabag instance"
 
 
-WALLABAG_DATA_IMAGES=./data/wallabag
+WALLABAG_DATA_IMAGES=./data/wallabag_images
+WALLABAG_DATA_CONFIG=./data/wallabag_config
 MYSQL_DATA=./data/mysql
