--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
     client_max_body_size 100M;
 
     map $http_x_forwarded_proto $fe_https {
-        default off;
+        default $https;
         https on;
     }
 
