--- a/root/etc/wallabag/parameters.template.yml
+++ b/root/etc/wallabag/parameters.template.yml
@@ -5,7 +5,7 @@ parameters:
     database_name: ${SYMFONY__ENV__DATABASE_NAME:-symfony}
     database_user: ${SYMFONY__ENV__DATABASE_USER:-root}
     database_password: ${SYMFONY__ENV__DATABASE_PASSWORD:-~}
-    database_path: "%kernel.root_dir%/../data/db/wallabag.sqlite"
+    database_path: "%kernel.project_dir%/data/db/wallabag.sqlite"
     database_table_prefix: ${SYMFONY__ENV__DATABASE_TABLE_PREFIX:-wallabag_}
     database_socket: null
     database_charset: ${SYMFONY__ENV__DATABASE_CHARSET:-utf8}
