Update nginx.conf to work with IPv6

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -36,6 +36,7 @@ http {
 
     server {
         listen 80;
+        listen [::0]:80;
         server_name _;
         root /var/www/wallabag/web;
 
