Update NGINX timeout to align with max_execution_time
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -58,6 +58,7 @@ http {
             # for more information).
             fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
             fastcgi_param DOCUMENT_ROOT $realpath_root;
+            fastcgi_read_timeout 300s;
             # Prevents URIs that include the front controller. This will 404:
             # http://domain.tld/app.php/some-path
             # Remove the internal directive to allow URIs like this
