Support dualstack listen on nginx
Fixes #422
Supersedes #435

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -35,8 +35,7 @@ http {
     }
 
     server {
-        listen 80;
-        listen [::0]:80;
+        listen [::]:80 ipv6only=off;
         server_name _;
         root /var/www/wallabag/web;
 
