--- a/root/etc/wallabag/nginx.template.conf
+++ b/root/etc/wallabag/nginx.template.conf
@@ -25,8 +25,8 @@ http {
     open_file_cache max=100;
     client_max_body_size 100M;
 
-    map $http_x_forwarded_proto $fe_https {
-        default $https;
+    map $$http_x_forwarded_proto $$fe_https {
+        default $$https;
         https on;
     }
 
@@ -41,12 +41,12 @@ http {
 
         location / {
             # try to serve file directly, fallback to app.php
-            try_files $uri /app.php$is_args$args;
+            try_files $$uri /app.php$$is_args$$args;
         }
 
-        location ~ ^/app\.php(/|$) {
+        location ~ ^/app\.php(/|$$) {
             fastcgi_pass php-upstream;
-            fastcgi_split_path_info ^(.+\.php)(/.*)$;
+            fastcgi_split_path_info ^(.+\.php)(/.*)$$;
             include fastcgi_params;
             # When you are using symlinks to link the document root to the
             # current version of your application, you should pass the real
@@ -55,8 +55,8 @@ http {
             # Otherwise, PHP's OPcache may not properly detect changes to
             # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
             # for more information).
-            fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
-            fastcgi_param DOCUMENT_ROOT $realpath_root;
+            fastcgi_param  SCRIPT_FILENAME  $$realpath_root$$fastcgi_script_name;
+            fastcgi_param DOCUMENT_ROOT $$realpath_root;
             fastcgi_read_timeout ${FASTCGI_READ_TIMEOUT:-300s};
             # Prevents URIs that include the front controller. This will 404:
             # http://domain.tld/app.php/some-path
