Adding the template based approach and checking IPv6 Dynamically during entrypoint
Adding the comment to nginx file

--- a/root/etc/nginx/nginx.template.conf
+++ b/root/etc/nginx/nginx.template.conf
@@ -1,9 +1,9 @@
-user  nginx;
-worker_processes  1;
-pid        /var/run/nginx.pid;
+user nginx;
+worker_processes 1;
+pid /var/run/nginx.pid;
 
 events {
-    worker_connections  2048;
+    worker_connections 2048;
     multi_accept on;
     use epoll;
 }
@@ -25,8 +25,8 @@ http {
     open_file_cache max=100;
     client_max_body_size 100M;
 
-    map $http_x_forwarded_proto $fe_https {
-        default $https;
+    map $$http_x_forwarded_proto $$fe_https {
+        default $$https;
         https on;
     }
 
@@ -35,13 +35,14 @@ http {
     }
 
     server {
-        listen [::]:80 ipv6only=off;
+        listen 80;
+        ${IPV6_LISTEN}
         server_name _;
         root /var/www/wallabag/web;
 
         location / {
             # try to serve file directly, fallback to app.php
-            try_files $uri /app.php$is_args$args;
+            try_files $$uri /app.php$$is_args$$args;
         }
 
         location ~ ^/app\.php(/|$) {
@@ -55,8 +56,8 @@ http {
             # Otherwise, PHP's OPcache may not properly detect changes to
             # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
             # for more information).
-            fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
-            fastcgi_param DOCUMENT_ROOT $realpath_root;
+            fastcgi_param SCRIPT_FILENAME $$realpath_root$$fastcgi_script_name;
+            fastcgi_param DOCUMENT_ROOT $$realpath_root;
             fastcgi_read_timeout 300s;
             # Prevents URIs that include the front controller. This will 404:
             # http://domain.tld/app.php/some-path
@@ -67,7 +68,6 @@ http {
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
     }
-
 }
 
 daemon off;
